--- a/Day_1/Index.html
+++ b/Day_1/Index.html
@@ -4,33 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
-<style>
-    .main-container{
-        background-color: red;
-        padding: 20px;
-        border-radius: 20px;
-        display: grid;
-        grid-template-columns: auto auto auto auto;
-    }
-    .box{
-        background-color: blue;
-        padding: 2px;
-        border-radius: 20px;
-        margin: 10px;
-        
-
-    }
-    h1{
-        font-size: 10px;
-    }
-</style>
 <body>
     <div class="main-container" >
      <div class="box"><h1>Am the heading 1</h1></div>
      <div class="box"><h2>Am the heading 1</h2></div>
      <div class="box"><h1>Am the heading 1</h1></div>
      <div class="box"><h1>Am the heading 1</h1></div>
+     <div class="box"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, culpa nihil. Nostrum excepturi fugit saepe iste necessitatibus iusto dignissimos? Blanditiis odit voluptatum hic sapiente tenetur? Facilis reiciendis provident veniam nostrum!</p></div>
+     <div class="box"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, culpa nihil. Nostrum excepturi fugit saepe iste necessitatibus iusto dignissimos? Blanditiis odit voluptatum hic sapiente tenetur? Facilis reiciendis provident veniam nostrum!</p></div>
+     <div class="box"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, culpa nihil. Nostrum excepturi fugit saepe iste necessitatibus iusto dignissimos? Blanditiis odit voluptatum hic sapiente tenetur? Facilis reiciendis provident veniam nostrum!</p></div>
+     <div class="box"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, culpa nihil. Nostrum excepturi fugit saepe iste necessitatibus iusto dignissimos? Blanditiis odit voluptatum hic sapiente tenetur? Facilis reiciendis provident veniam nostrum!</p></div>
+     <div class="box"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, culpa nihil. Nostrum excepturi fugit saepe iste necessitatibus iusto dignissimos? Blanditiis odit voluptatum hic sapiente tenetur? Facilis reiciendis provident veniam nostrum!</p></div>
+     <div class="box"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, culpa nihil. Nostrum excepturi fugit saepe iste necessitatibus iusto dignissimos? Blanditiis odit voluptatum hic sapiente tenetur? Facilis reiciendis provident veniam nostrum!</p></div>
+     <div class="box"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, culpa nihil. Nostrum excepturi fugit saepe iste necessitatibus iusto dignissimos? Blanditiis odit voluptatum hic sapiente tenetur? Facilis reiciendis provident veniam nostrum!</p></div>
+     <div class="box"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, culpa nihil. Nostrum excepturi fugit saepe iste necessitatibus iusto dignissimos? Blanditiis odit voluptatum hic sapiente tenetur? Facilis reiciendis provident veniam nostrum!</p></div>
     </div>
 </body>
 </html> 
