--- a/Day_1/Index.html
+++ b/Day_1/Index.html
@@ -1,3 +1,11 @@
+<!-- Introduction to Front-End Development 
+Software Installation
+https://code.visualstudio.com/
+Online HTML Editor
+https://onecompiler.com/html
+Intro to HTML and Tags 
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
